# rust

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  help.html  index.html  search-index.js  settings.html
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: audit.yml  docs.yml  main.yml  release.yml  security-audit.yml
book/: package-lock.json  package.json
crates/my-crate/: Cargo.toml  README.md
crates/my-crate/book/: package-lock.json
crates/my-package/: Cargo.toml
crates/my-package/src/: lib.rs
crates/my_crate/: CHANGELOG.md  Cargo.toml
crates/pkg1/: Cargo.toml  README.md
crates/pkg1/src/: lib.rs
my_crate/: all.html  fn.greet.html  index.html
rust_template/: all.html  fn.greet.html  index.html
search.desc/my_crate/: my_crate-desc-0-.js
src/my_crate/: lib.rs.html
src/rust_template/: lib.rs.html
