[package]
name = "rust-template"
version = "0.1.0"
authors = [
	"{{author}} <{{email}}>"
]
description = "{{desc}}"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.70.0"
# keywords = []
# categories = []
exclude = [
	"fuzz",
	"book",
	"benches",
]

# [dev-dependencies]
# criterion = { version = "0.5.1", features = ["html_reports"] }
# iai = "0.1.0"

# # criterion benchmarks
# [[bench]]
# path = "benches/criterion/fibb.rs"
# name = "criterion_fibb"
# harness = false

# # iai benchmarks
# [[bench]]
# path = "benches/iai/fibb.rs"
# name = "iai_fibb"
# harness = false
